--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
                             </a>
 
                         <!--==================== PLACES CARD 4 ====================-->
-                        <a href="https://www.linkedin.com/in/rosa-atorrasagasti-salegui-930a57211/" target="_blank">
+                        <a href="https://www.linkedin.com/in/nikolas-iriondo-igartua-5b4473212/" target="_blank">
                             <div class="place__card w-[12em] mx-4 my-4">
                                 <img src="assets/img/niko.jpg" alt="" class="place__img">
                                 
@@ -247,7 +247,7 @@
                         </a>
 
                         <!--==================== PLACES CARD 3 ====================-->
-                        <a href="https://www.linkedin.com/in/rosa-atorrasagasti-salegui-930a57211/" target="_blank">
+                        <a href="https://www.linkedin.com/in/itsaso-bolinaga-salda%C3%B1a-a180b31bb/" target="_blank">
                             <div class="place__card w-[12em] mx-4 my-4">
                                 <img src="assets/img/itsaso.jpg" alt="" class="place__img">
                                 
