--- a/index.html
+++ b/index.html
@@ -283,11 +283,10 @@
         <!--==================== FOOTER ====================-->
         <footer class="footer section">
             <div class="footer__container container grid">
-                <div class="">
                     <div class="">
-                        <h3 class="text-2xl font-bold">Indart(u)</h3>
-                        <p class="footer__description">Herriak <b> jantzi ditzagun,</b> bizitza <br>galdu gabe
-                        </p>
+                        <h3 class="text-2xl font-bold mb-2">Indart(u)</h3>
+                        <a href="https://drive.google.com/file/d/14WT3cFJKIXSVZzBM_JmMkph49wR-J-LD/view?usp=share_link" target="_blank"><p>Aviso Legal</p></a>
+                        <a href="https://drive.google.com/file/d/1sLs0G7UlKYJyZvprgnrimh8tG4IAWqu4/view?usp=share_link" target="_blank"><p>Política de privacidad</p></a>
                     </div>
                 </div>
 
