--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 </div>
 
                 <div class="footer__lefts">
-                    <p class="footer__copy">&#169; 2023 KHAOS. All rigths reserved.</p>
+                    <p class="my-8">&#169; 2023 KHAOS. All rigths reserved.</p>
                     <div class="footer__terms">
                     </div>
                 </div>
